# RoseTTAFold-All-Atom

./: .drone.jsonnet  .drone.yml  .gitignore  Dockerfile  KAP3FL  LICENSE  README.md  brandons-vim-rc  environment.yaml  install_dependencies.sh  make_msa.sh  pyproject.toml  ui.py
data/: 1_parse_cifs_into_rows.py  2_merge_rows_into_master_set.py  3_filter_nonexisting_partner_chains.py  4_load_all_examples.py  5_add_bad_examples_as_column.py  README.md  criterion_utils.py  curation_utils.py  custom_executor.py  data_constants.py  reprocess_posebusters.py  run_all.py
data/archived/: array_submit.sh  count_atoms.py  curate_cif_assemblies.ipynb  filter_bad_msas.py  filter_covalents.py  get_ligands.py  get_partners.py  lig_to_mol2.py  parse_cifs.py
docker/: Dockerfile
docker/lsf/: bsub.sh
examples/docker/: 3fap_A.fasta  3fap_B.fasta  3fap_aux.pt  ARD_ideal.sdf  docker.yaml  dockerrun.sh
examples/nucleic_acid/: 7u7w_B.fasta  7u7w_C.fasta
examples/protein/: 7qxr.fasta  7s69_A.fasta  7u7w_A.fasta
examples/residue_replacement/: 1h4x.fasta  SEP_ideal_trim.sdf
examples/small_molecule/: 7s69_glycan.sdf  NSW_ideal.sdf  XG4.sdf
ide/whs/: rf2aa.sublime-project
input_prep/: make_ss.sh
rf2aa/: __init__.py  analysis_util.py  atomized_protein_frames.pt  cartbonded.json  chemical.py  cifutils.py  coords6d.py  debug.py  ffindex.py  kinematics.py  memory.py  run_inference.py  scoring.py  set_seed.py  setup_model.py  symmetry.py  tensor_util.py  trainer_new.py  util.py  util_module.py  validate.py
rf2aa/SE3Transformer/tests/: test_equivariance.py  utils.py
rf2aa/config/inference/: base.yaml  covalent.yaml  nov2023_model_eval.yaml  nucleic_acid.yaml  paper_model_eval.yaml  protein.yaml  protein_complex_sm.yaml  (+5 more)
rf2aa/data/: chain_crop.py  cluster_dataset.py  compose_dataset.py  covale.py  data_loader.py  data_loader_utils.py  dataloader_adaptor.py  identical_ligands.py  merge_inputs.py  nucleic_acid.py  parsers.py  preprocessing.py  protein.py  sampler.py  small_molecule.py
rf2aa/input_prep/: make_msa.sh  make_ss.sh
rf2aa/loss/: loss.py  loss_factory.py
rf2aa/metrics/: metrics_base.py  metrics_factory.py  predicted_error.py
rf2aa/model/: RoseTTAFoldModel.py  Track_module.py  __init__.py  embedding_blocks.py  network.py  refinement_blocks.py  simulator_blocks.py
rf2aa/tests/: __init__.py  conftest.py  test_benchmark.py  test_conditions.py  test_configs.py  test_crop_chirals.py  test_dataset.py  test_loss.py  test_metrics.py  test_model.py  test_msa_featurize.py  test_msa_loading.py  test_msa_pairing.py  test_sampler.py  test_semantics.py  test_trainer.py  testutil.py
rf2aa/tools/: __init__.py  debug_item.py  edit_lengths_for_removed_datasets.py  generate_sample_lengths.py  minimize_example.py  testutils.py
rf2aa/training/: EMA.py  checkpoint.py  optimizer.py  recycling.py  scheduler.py
rf2aa/valid_sets/: posebusters_clean.csv
(+82 files in other folders)
